cleanup some footnotes

--- a/history/foreign/axial.html
+++ b/history/foreign/axial.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-18 Mon 08:40 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Early Iron Age Indian influences on the Middle-East</title>
@@ -823,49 +823,45 @@ Well, what were the roots of the Kambojas?
 Some are fond of pointing out their Iranian traits:
 </p>
 
-<p class="footpara">
-·       The linguists Yāska (c. 700 BC) and Patanjali (c. 150 BC) say that the Kambojas used the verb <i>shavati</i> to mean &ldquo;to go&rdquo;, which is a form found in ancient Avestan (its root <i>shava</i> was acceptable Sanskrit)
-</p>
+<ul class="org-ul">
+<li>The linguists Yāska (c. 700 BC) and Patanjali (c. 150 BC) say that the Kambojas used the verb <i>shavati</i> to mean &ldquo;to go&rdquo;, which is a form found in ancient Avestan (its root <i>shava</i> was acceptable Sanskrit)</li>
+
+<li>They were identical to the Aśvaka of Vedic literature, probably a nod to the Iranian -<i>aspa</i> naming convention (you might think the name was an exonym, based on horses being their chief export, but the Greeks <i>also</i> called them the Aspasioi before they had encountered anyone else in India) &#x2013; but it should be noted that -<i>aśva</i> names did exist in India, e.g. <a href="https://www.wisdomlib.org/definition/bahulashva">Bahulāśva</a>, <a href="https://www.wisdomlib.org/definition/kubalashva">Kubalāśva</a>, <a href="https://www.wisdomlib.org/definition/shabalashva">Śabalāśva</a>, <a href="https://www.wisdomlib.org/definition/krishashva">Kr̥śāśva</a>, <a href="https://www.wisdomlib.org/definition/balashva">Balāśva</a>.</li>
+
+<li>There is a bunch of Indian literature deriding them as having impure traits &#x2013; but such insults exists for every tribe outside the region comprising modern-day UP</li>
+
+<li>Some Zoroastrian-affiliated practices are noted of them, such practices are also noted in Gāndhāra.</li>
+</ul>
 
 <p class="footpara">
-·       They were identical to the Aśvaka of Vedic literature, probably a nod to the Iranian -<i>aspa</i> naming convention (you might think the name was an exonym, based on horses being their chief export, but the Greeks <i>also</i> called them the Aspasioi before they had encountered anyone else in India) &#x2013; but it should be noted that -<i>aśva</i> names did exist in India, e.g. <a href="https://www.wisdomlib.org/definition/bahulashva">Bahulāśva</a>, <a href="https://www.wisdomlib.org/definition/kubalashva">Kubalāśva</a>, <a href="https://www.wisdomlib.org/definition/shabalashva">Śabalāśva</a>, <a href="https://www.wisdomlib.org/definition/krishashva">Kr̥śāśva</a>, <a href="https://www.wisdomlib.org/definition/balashva">Balāśva</a>.
+On the other hand, they were initially only ever mentioned in Indian literature and epigraphy; appearing in Persian writings (as <i>Kamboh</i>) much later &#x2013; in ancient times, Persians just regarded them as part of Gāndhāra. The rulers of the Kambojas are acknowledged as kshatriya by e.g. Pāṇini, and there is also plenty of mention of Kamboja Brahmins in the literature. The Vamsa Brahmana mentions a Vedic sage called Kamboja (it was common to refer to people by the name of their country, although considered teasing now), who was a descendant of Upamanyu and a student of Shaungayani of the Madras:
 </p>
 
-<p class="footpara">
-·       There is a bunch of Indian literature deriding them as having impure traits &#x2013; but such insults exists for every tribe outside the region comprising modern-day UP
-</p>
-
-<p class="footpara">
-·       Some Zoroastrian-affiliated practices are noted of them, such practices are also noted in Gāndhāra.
-</p>
-
-<p class="footpara">
-On the other hand, they are only ever mentioned in Indian literature and epigraphy until much later (when they start appearing in Persian writings as <i>Kamboh</i>) &#x2013; in ancient times, Persians just regarded them as part of Gāndhāra. The rulers of the Kambojas are acknowledged as kshatriya by e.g. Pāṇini, and there is also plenty of mention of Kamboja Brahmins in the literature. The Vamsa Brahmana mentions a Vedic sage called Kamboja (it was common to refer to people by the name of their country, although considered teasing now), who was a descendant of Upamanyu and a student of Shaungayani of the Madras:
-</p>
-
-<p class="footpara">
+<blockquote>
+<p>
 Ānandajaścāndʰanāyanaḥ Śāmbāccʰārkarākṣyāt Kāmbojāccopamanyavāt||
 </p>
 
-<p class="footpara">
+<p>
 Śāmbaḥ Śārkarākṣyaḥ Kāmbojaścaupamanyavo Madrakārāccʰauṅgāyaneḥ||
 </p>
 
-<p class="footpara">
+<p>
 Madrakāraḥ Śauṅgāyaniḥ svāterauṣṭrākṣeḥ||
 </p>
 
-<p class="footpara">
+<p>
 ---<a href="https://titus.fkidg1.uni-frankfurt.de/texte/etcs/ind/aind/ved/sv/vb/vb.htm">Vamsa Brāhmaṇa 1.18-20</a>
 </p>
 
-<p class="footpara">
+<p>
 The Kamboja and the Vasishtha Brahmins wear one choti on the right side of their head; the Atris and Kashyapas to wear chotis on both sides of their heads; the Bhrgus shave their heads; the Angirasa Brahmins keep five chotis; the Bajasneya Gotra Brahmins keep only one choti; other Brahmins should keep chotis according to their respective traditions and customs.
 </p>
 
-<p class="footpara">
+<p>
 &#x2014;Paraskara Grhya-Sutra, 2.1.23 (does not appear in the Wisdomlib version, apparently appears in the version in a certain Pandit Harihar&rsquo;s commentary)
 </p>
+</blockquote>
 
 <p class="footpara">
 See also this interesting write-up &#x2013; most of its claims are stretches, but there&rsquo;s a good reference of primary sources there):
@@ -912,7 +908,7 @@ You also have the Nuristani people, who inhabit the same region &#x2013; they we
 </div></div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-18 Mon 08:40</p>
 </div>
 </body>
 </html>
