--- a/politics/leli-raj/elections.html
+++ b/politics/leli-raj/elections.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-08-18 Mon 08:38 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Elections : Politics = Exams : Learning</title>
@@ -214,6 +214,10 @@
 <h2 id="orge37846c"><span class="section-number-2">1.</span> Elections are like exams</h2>
 <div class="outline-text-2" id="text-1">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1957272992075125111">Twitter</a></p>
+</p>
+
+<p>
 Right-wingers center all their politics around elections like a student who centers all her learning around final exams.
 </p>
 
@@ -234,6 +238,7 @@ Democracy only replaces the latter iceberg-tip with elections; the former still 
 <h2 id="org2a7d434"><span class="section-number-2">2.</span> midwit human capital importance</h2>
 <div class="outline-text-2" id="text-2">
 <p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1957273243955376629">Twitter</a></p>
 Do not cope by thinking this is an insignificant demographic, btw.
 </p>
 
@@ -245,7 +250,7 @@ That would be the same mistake US RWs made in the 70s+. Thinking purely in terms
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-08-18 Mon 08:38</p>
 </div>
 </body>
 </html>
