--- a/politics/rhetorical-advice/misc.html
+++ b/politics/rhetorical-advice/misc.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-08-18 Mon 08:38 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Misc advice on rhetoric and arguing ⭐</title>
@@ -624,7 +624,7 @@ Because if you pwn those without credentials, people will just say &ldquo;great 
 </p>
 
 <p>
-HERE
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1957264687365537972">Twitter</a></p>
 </p>
 
 <p>
@@ -721,7 +721,7 @@ What is necessary is a calculated willingness to sacrifice virtues for a greater
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-08-18 Mon 08:38</p>
 </div>
 </body>
 </html>
