--- a/history/sources/secondary.html
+++ b/history/sources/secondary.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Secondary sources</title>
@@ -295,6 +295,7 @@ This post provides a bibiliography of high-quality, information-dense books on I
 <li>Jayatilleke (1963), <i>Early Buddhist Theory of Knowledge</i>. 526 pages. Full text from <a href="https://archive.org/details/EarlyBuddhistTheoryOfKnowledge">archive.org</a>.</li>
 <li>Patrick Olivelle (1992), <i>Saṃnyāsa Upaniṣads</i>. 114 pages. Full text from <a href="https://archive.org/details/SamnyasaUpanishads/page/n9/mode/2up">archive.org</a>.</li>
 <li>Karl Potter (1977), <i>The Encyclopedia of Indian Philosophies.</i> Vols 1-26: ~19,000 pages. Full texts of vols 1-5, 7-10 from <a href="https://archive.org/details/the-encyclopedia-of-indian-philosophies/2%20Indian%20Metaphysics%20and%20Epistemology%20The%20Tradition%20of%20Nyaya-Vaisesika%20up%20to%20Gangesa">archive.org</a>, library access of vol 6 from <a href="https://www.jstor.org/stable/j.ctt7zv3p9">JSTOR</a>, no clue about the rest. This work is included because it is a monumental effort, but I think it should be seen more as an index of analyses of primary sources, rather than a pedagogical tool.</li>
+<li>Dharampal (1983), <i>The Beautiful Tree: Indigenous Indian Education in the Eighteenth Century</i> (Volume III of the collected writings of Dharampal). Full text from <a href="https://archive.org/details/TheBeautifulTree-Dharampal">archive.org</a>, <a href="https://library.bjp.org/jspui/bitstream/123456789/969/1/The%20Beautiful%20Tree%20-%20Indigenous%20Indian%20Education%20in%20The%20Eighteenth%20Century%20%28Volume%203%29.pdf">bjp.org</a>, <a href="https://www.arvindguptatoys.com/arvindgupta/beautifultree.pdf">arvindguptatoys.com</a></li>
 </ul>
 </div>
 </div>
@@ -392,7 +393,7 @@ Some particularly good snippets by these authors: - REDACTED, _<a href="https://
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
