--- a/other-people/facts.html
+++ b/other-people/facts.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Facts and data</title>
@@ -237,6 +237,12 @@
 <li><a href="#orge8a1cad">5.1. delayed covid vaccine</a></li>
 </ul>
 </li>
+<li><a href="#orgde7de53">6. data-driven midtwittery</a>
+<ul>
+<li><a href="#orgbc571c1">6.1. FSI</a></li>
+</ul>
+</li>
+<li><a href="#orgb4faa2d">7. scratchpad</a></li>
 </ul>
 </div>
 </div>
@@ -842,10 +848,68 @@ This one&rsquo;s entirely correct. Eric Topol, who is still in good standing on 
 </div>
 </div>
 </div>
+<div id="outline-container-orgde7de53" class="outline-2">
+<h2 id="orgde7de53"><span class="section-number-2">6.</span> data-driven midtwittery</h2>
+<div class="outline-text-2" id="text-6">
+</div>
+<div id="outline-container-orgbc571c1" class="outline-3">
+<h3 id="orgbc571c1"><span class="section-number-3">6.1.</span> FSI</h3>
+<div class="outline-text-3" id="text-6-1">
+<p>
+<img src="/img/charts/fsi.jpeg" alt="fsi.jpeg" />
+</p>
+</div>
+</div>
+</div>
+<div id="outline-container-orgb4faa2d" class="outline-2">
+<h2 id="orgb4faa2d"><span class="section-number-2">7.</span> scratchpad</h2>
+<div class="outline-text-2" id="text-7">
+<p>
+Some thoughts/things worth mentioning&#x2013;
+</p>
+
+<p>
+1a) Swaminathan Aiyer had a paper explaining how economic reforms have helped Dalits far more than reservations ever could: <a href="https://www.cato.org/sites/cato.org/files/pubs/pdf/pa776.pdf">https://www.cato.org/sites/cato.org/files/pubs/pdf/pa776.pdf</a>
+</p>
+
+<ol class="org-ol">
+<li>Touching on your point on UCs being dominant economically &#x2013; the history of modernization in India is of castes uplifting themselves one-by-one, and this is what explains much of the discrepancies today, more than historic injustices.</li>
+</ol>
+
+<p>
+Some of these &ldquo;stories&rdquo; &#x2013; e.g. of landholding castes that did well vs poorly, might be worth describing to try and imply that reservations aren&rsquo;t what help groups succeed.
+</p>
+
+<ol class="org-ol">
+<li>Might also be worth stressing the importance of manufacturing in helping these groups succeed. Should milk that video of RG getting schooled by the wage laborer.</li>
+
+<li>Market minorities point is good &#x2013; can even frame this as something like &ldquo;India has a long been a land of religious tolerance (wrt Jains) and refuge (wrt Parsis or Nasranis), but JAUH puts this under assault&rdquo;</li>
+
+<li>It might be a good idea to explicitly attack the &ldquo;Brahmins created the caste system and oppressed everyone&rdquo; point. Mention points like</li>
+<li>the castewise breakdown of indigenous schools. This tweet gives a sample, more examples in &ldquo;Beautiful tree&rdquo; by Dharampal:</li>
+</ol>
+<p>
+<a href="https://x.com/PunchTantrum/status/1703653405783474545">https://x.com/PunchTantrum/status/1703653405783474545</a>
+</p>
+<ol class="org-ol">
+<li>a lot of śūdras were really well-respected artisinal castes</li>
+</ol>
+<p>
+<a href="https://x.com/satoverma/status/1960710440973165066">https://x.com/satoverma/status/1960710440973165066</a>
+Indian artisans were globally well-reknown for the quality of their craft e.g. they were widely-employed by Central Asians and Mongols (which is how groups like the gypsies formed). Someone can chime in if they have a good resource on this, everything I know comes from reading discussions between sapratha and MT.
+</p>
+
+<ol class="org-ol">
+<li>Continuing on 3 &#x2013; depending on how much you want to go into history, should acknowledge that ancient Indian lawmakers did have caste-differentiated laws &#x2013; but soften this by pointing out things like</li>
+<li>this was usually in the form of higher expectations from UCs. Meat, alcohol and even usury was only forbidden for V1, V2.</li>
+<li>Mention of opposite narratives, e.g. Mansmriti talking about how you can learn from anyone, or Hindu philosophy repeatedly asserting that one should see everyone equally regardless of caste (e.g. the Ādi Śaṅkara incident, or Gita 5.18 that I just learned from HK &#x2013; but there would be many more examples in the Upaniṣads)</li>
+</ol>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
