--- a/other-people/health.html
+++ b/other-people/health.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Health and genetics</title>
@@ -259,6 +259,54 @@ Furthermore, the Indus Valley Rakhigarhi reconstructed individuals from Lee, Shi
 <p>
 <img src="/img/memes/height.png" alt="height.png" />
 </p>
+
+<p>
+&#x2026;
+</p>
+
+<p>
+<p class="byline">Published on <a href="https://x.com/Shiftant/status/1957561389620302190">Twitter</a> by <a href="https://x.com/Shiftant">@Shiftant</a></p>
+</p>
+
+<p>
+Polygenic scores for height among modern populations, from Davide Piffer&rsquo;s substack.
+</p>
+
+<p>
+In sub-Sahara and in the subcontinent especially, phenotypic height lags far behind genotypic height. From these scores, you should expect Tamils to be taller than Chinese and (South) Italians.
+</p>
+
+<p>
+<img src="/img/charts/aasi_height_polygenic.jpeg" alt="aasi_height_polygenic.jpeg" />
+</p>
+
+<p>
+<img src="/img/charts/aasi_height_polygenic_2.jpeg" alt="aasi_height_polygenic_2.jpeg" />
+</p>
+
+<p>
+Also from Piffer&rsquo;s substack: Sardinians have the lowest polygenic scores for height among all included populations (though we haven&rsquo;t got scores for Mbuti or Twa)
+</p>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1957646284120289326">Twitter</a></p>
+</p>
+
+<p>
+<a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC6931495/">https://pmc.ncbi.nlm.nih.gov/articles/PMC6931495/</a>
+</p>
+
+<p>
+Yeah this is what you see with Singaporean Tamils; their average male height is 5&rsquo;8", which is higher than e.g. Middle-Eastern and Southern European populations.
+</p>
+
+<p>
+There&rsquo;s a lot of stunting and undernutrition in India.
+</p>
+
+<p>
+Singaporean Tamil example is most notable because that migration was largely not selective (went there as indentured labourers).
+</p>
 </div>
 </div>
 <div id="outline-container-org6e1538e" class="outline-2">
@@ -329,7 +377,7 @@ Landini et al (2020), <a href="https://pmc.ncbi.nlm.nih.gov/articles/PMC7896717/
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
