--- a/other-people/takes.html
+++ b/other-people/takes.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Favorite tweets by others</title>
@@ -257,6 +257,7 @@
 <li><a href="#org7b62be6">4.7. Polite fictions</a></li>
 <li><a href="#org76cfaf4">4.8. Advanced Pakistani Sociology</a></li>
 <li><a href="#orgd6d2bac">4.9. American foreign policy</a></li>
+<li><a href="#org459fd55">4.10. Rahul Gandhi</a></li>
 </ul>
 </li>
 </ul>
@@ -1144,11 +1145,19 @@ Aside from certain extraordinary Secretary of States and Presidents, it&rsquo;s 
 </p>
 </div>
 </div>
+<div id="outline-container-org459fd55" class="outline-3">
+<h3 id="org459fd55"><span class="section-number-3">4.10.</span> Rahul Gandhi</h3>
+<div class="outline-text-3" id="text-4-10">
+<p>
+those who thought he was naive and stupid should know he is now most frustrated, cunning, ruthless and arrogant man without any principles or ideology, who can even sell his country for his desire to be PM
+</p>
+</div>
+</div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
