--- a/politics/nirnaya-pill/veto.html
+++ b/politics/nirnaya-pill/veto.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Hindu Svarājya and the Muslim veto ⭐</title>
@@ -207,6 +207,7 @@
 <ul>
 <li><a href="#orgcfc30be">1. Short version</a></li>
 <li><a href="#org9c9d9bd">2. Long version</a></li>
+<li><a href="#orga2aef89">3. Hindoo Rāṣṭra</a></li>
 </ul>
 </div>
 </div>
@@ -318,10 +319,19 @@ My people should be able to do and get what they want with their own will and re
 </p>
 </div>
 </div>
+<div id="outline-container-orga2aef89" class="outline-2">
+<h2 id="orga2aef89"><span class="section-number-2">3.</span> Hindoo Rāṣṭra</h2>
+<div class="outline-text-2" id="text-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1960202631940546641">Twitter</a></p>
+When we can fund candidates in US elections to counter Pakistani/Qatari lobbying without being accused of Islamophobia, when our Midwit Human Capital is incentivized to grindmax snippetjeetry instead of UPSCjeetry, when there is serious HNat school of history and Hindoo High Culture is promoted by govt and media, all without resistance, that is when I will know Hindoo Rāṣṭra is here.
+</p>
+</div>
+</div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
