--- a/politics/political-theory/meme-theory.html
+++ b/politics/political-theory/meme-theory.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Highly Advanced Semi-formal Meme Theory for beginners ⭐</title>
@@ -226,26 +226,31 @@
 <li><a href="#orgccc8401">12. decolonization</a></li>
 <li><a href="#org7e75877">13. democracy</a></li>
 <li><a href="#orgc50129a">14. LARPconning</a></li>
-<li><a href="#org4a49474">15. Idiot cop</a></li>
-<li><a href="#orgf3b4fbd">16. Elite Subhuman Capital</a></li>
-<li><a href="#org1b0714b">17. Fungible Brown</a>
+<li><a href="#orgefa04d8">15. Algorithmic hijacking</a></li>
+<li><a href="#org4a49474">16. Idiot cop</a></li>
+<li><a href="#orgf3b4fbd">17. Elite Subhuman Capital</a></li>
+<li><a href="#org1b0714b">18. Fungible Brown</a>
 <ul>
-<li><a href="#orgcbfa9f0">17.1. Sanskritization</a></li>
-<li><a href="#org99716ef">17.2. synthesis</a></li>
+<li><a href="#orgcbfa9f0">18.1. Sanskritization</a></li>
+<li><a href="#org99716ef">18.2. synthesis</a></li>
 </ul>
 </li>
-<li><a href="#org9e581b0">18. West Bengal</a></li>
-<li><a href="#orgc6295ce">19. Civilization LARP</a></li>
-<li><a href="#org619a0a4">20. Civs</a></li>
-<li><a href="#org6c218db">21. LARP</a></li>
-<li><a href="#org3b37c9d">22. Indian Maximalism, European minimalism</a></li>
-<li><a href="#org45f1caa">23. Diffusion of blame</a></li>
-<li><a href="#orgd8fb65a">24. Arbitrage</a></li>
-<li><a href="#org167df95">25. eight ways to engage with enemies</a></li>
-<li><a href="#org81ea6a8">26. Wwnhmbkpd</a></li>
+<li><a href="#org9e581b0">19. West Bengal</a></li>
+<li><a href="#orgc6295ce">20. Civilization LARP</a></li>
+<li><a href="#org619a0a4">21. Civs</a></li>
+<li><a href="#org6c218db">22. LARP</a></li>
+<li><a href="#org3b37c9d">23. Indian Maximalism, European minimalism</a></li>
+<li><a href="#org45f1caa">24. Diffusion of blame</a></li>
+<li><a href="#orgd8fb65a">25. Arbitrage</a></li>
+<li><a href="#org167df95">26. eight ways to engage with enemies</a></li>
+<li><a href="#org81ea6a8">27. Wwnhmbkpd</a></li>
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1960465673957859353">Twitter</a></p>
+Ever since I spawned, nobody talks about shakespeare anymore. He only coined slop words like &ldquo;summer&rsquo;s day&rdquo; and &ldquo;hamlet&rdquo; and &ldquo;thou&rdquo; while I coined words for important concepts like Fungible Brown, LARPconning, big-braining, and manly wordceler.
+</p>
 <div id="outline-container-orgfa91a50" class="outline-2">
 <h2 id="orgfa91a50"><span class="section-number-2">1.</span> good meme, bad meme</h2>
 <div class="outline-text-2" id="text-1">
@@ -623,9 +628,43 @@ I am begging people to not take stock characterizations popularized by Hollywood
 </p>
 </div>
 </div>
-<div id="outline-container-org4a49474" class="outline-2">
-<h2 id="org4a49474"><span class="section-number-2">15.</span> Idiot cop</h2>
+<div id="outline-container-orgefa04d8" class="outline-2">
+<h2 id="orgefa04d8"><span class="section-number-2">15.</span> Algorithmic hijacking</h2>
 <div class="outline-text-2" id="text-15">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1960913190650569115">Twitter</a></p>
+</p>
+
+<p>
+The 4chan right: &ldquo;We&rsquo;ve become so dominant in the culture! Even the left does physiognomy-posting and says based!&rdquo;
+</p>
+
+<p>
+You delusional fools, that&rsquo;s literally a strat. It&rsquo;s what subversion looks like when you&rsquo;re being subjected to it.
+</p>
+
+<p>
+It&rsquo;s the same with Indians getting giddy when leftists wear Hindu aesthetics or present their ideology as something with deep precedent in Hindu philosophy.
+</p>
+
+<p>
+You don&rsquo;t realize that you&rsquo;re getting subverted because you don&rsquo;t even know your own principles.
+</p>
+
+<p>
+<img src="/img/doc_img/algorithmic_hijacking.png" alt="algorithmic_hijacking.png" />
+</p>
+
+<blockquote>
+<p>
+The New York Times author Kevin Roose wrote that BreadTube creators employ a method he calls &ldquo;algorithmic hijacking&rdquo;.[8] This method involves them choosing to focus on the same topics discussed by content creators with right-wing politics, as a means for enabling their videos to be recommended to the same audiences consuming right-wing or far-right videos,[8] thereby exposing a wider audience to their perspectives
+</p>
+</blockquote>
+</div>
+</div>
+<div id="outline-container-org4a49474" class="outline-2">
+<h2 id="org4a49474"><span class="section-number-2">16.</span> Idiot cop</h2>
+<div class="outline-text-2" id="text-16">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1937405243190542772">Twitter</a></p>
 </p>
@@ -646,8 +685,8 @@ Also a third cop who actually ends up caring for the criminal to epicly own the 
 </div>
 </div>
 <div id="outline-container-orgf3b4fbd" class="outline-2">
-<h2 id="orgf3b4fbd"><span class="section-number-2">16.</span> Elite Subhuman Capital</h2>
-<div class="outline-text-2" id="text-16">
+<h2 id="orgf3b4fbd"><span class="section-number-2">17.</span> Elite Subhuman Capital</h2>
+<div class="outline-text-2" id="text-17">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1925041370068037957">Twitter</a></p>
 </p>
@@ -670,8 +709,8 @@ YOU <b>ARE</b> THE &ldquo;PATHETIC LOW-T DEHĀTI EMPOWERED BY JIO&rdquo;
 </div>
 </div>
 <div id="outline-container-org1b0714b" class="outline-2">
-<h2 id="org1b0714b"><span class="section-number-2">17.</span> Fungible Brown</h2>
-<div class="outline-text-2" id="text-17">
+<h2 id="org1b0714b"><span class="section-number-2">18.</span> Fungible Brown</h2>
+<div class="outline-text-2" id="text-18">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1883472540317979072">Twitter</a></p>
 </p>
@@ -704,8 +743,8 @@ Contrary to 2016-era wignat thought, it&rsquo;s subcontinental muslims who &ldqu
 </p>
 </div>
 <div id="outline-container-orgcbfa9f0" class="outline-3">
-<h3 id="orgcbfa9f0"><span class="section-number-3">17.1.</span> Sanskritization</h3>
-<div class="outline-text-3" id="text-17-1">
+<h3 id="orgcbfa9f0"><span class="section-number-3">18.1.</span> Sanskritization</h3>
+<div class="outline-text-3" id="text-18-1">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1939804354158186643">Twitter</a></p>
 FUNGIBLE BROWN FUNGIBLE BROWN FUNGIBLE BROWN.
@@ -733,8 +772,8 @@ It is inescapable. There are only two brown races in the world, Hindu and Fungib
 </div>
 </div>
 <div id="outline-container-org99716ef" class="outline-3">
-<h3 id="org99716ef"><span class="section-number-3">17.2.</span> synthesis</h3>
-<div class="outline-text-3" id="text-17-2">
+<h3 id="org99716ef"><span class="section-number-3">18.2.</span> synthesis</h3>
+<div class="outline-text-3" id="text-18-2">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1939642570088517740">Twitter</a></p>
 </p>
@@ -746,8 +785,8 @@ Totally coherent. Spank the fungible browns and chagnon-pill the big-brainers. T
 </div>
 </div>
 <div id="outline-container-org9e581b0" class="outline-2">
-<h2 id="org9e581b0"><span class="section-number-2">18.</span> West Bengal</h2>
-<div class="outline-text-2" id="text-18">
+<h2 id="org9e581b0"><span class="section-number-2">19.</span> West Bengal</h2>
+<div class="outline-text-2" id="text-19">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913930968278196565">Twitter</a></p>
 </p>
@@ -766,8 +805,8 @@ inflated pride over being marginally better than its Northwestern neighbour
 </div>
 </div>
 <div id="outline-container-orgc6295ce" class="outline-2">
-<h2 id="orgc6295ce"><span class="section-number-2">19.</span> Civilization LARP</h2>
-<div class="outline-text-2" id="text-19">
+<h2 id="orgc6295ce"><span class="section-number-2">20.</span> Civilization LARP</h2>
+<div class="outline-text-2" id="text-20">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1913369465322103182">Twitter</a></p>
 </p>
@@ -789,8 +828,8 @@ would be blasphemy.
 </div>
 </div>
 <div id="outline-container-org619a0a4" class="outline-2">
-<h2 id="org619a0a4"><span class="section-number-2">20.</span> Civs</h2>
-<div class="outline-text-2" id="text-20">
+<h2 id="org619a0a4"><span class="section-number-2">21.</span> Civs</h2>
+<div class="outline-text-2" id="text-21">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1952085907491934508">Twitter</a></p>
 </p>
@@ -841,8 +880,8 @@ Everyone else = Passive lurkers
 </div>
 </div>
 <div id="outline-container-org6c218db" class="outline-2">
-<h2 id="org6c218db"><span class="section-number-2">21.</span> LARP</h2>
-<div class="outline-text-2" id="text-21">
+<h2 id="org6c218db"><span class="section-number-2">22.</span> LARP</h2>
+<div class="outline-text-2" id="text-22">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1908159951219929575">Twitter</a></p>
 </p>
@@ -853,8 +892,8 @@ Yes everything is fake, all anyone does is LARP. Even physics is just the univer
 </div>
 </div>
 <div id="outline-container-org3b37c9d" class="outline-2">
-<h2 id="org3b37c9d"><span class="section-number-2">22.</span> Indian Maximalism, European minimalism</h2>
-<div class="outline-text-2" id="text-22">
+<h2 id="org3b37c9d"><span class="section-number-2">23.</span> Indian Maximalism, European minimalism</h2>
+<div class="outline-text-2" id="text-23">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1849793618740908240">Twitter</a></p>
 </p>
@@ -898,8 +937,8 @@ In architecture, in food, in youtube comments going &ldquo;don&rsquo;t forget X,
 </div>
 </div>
 <div id="outline-container-org45f1caa" class="outline-2">
-<h2 id="org45f1caa"><span class="section-number-2">23.</span> Diffusion of blame</h2>
-<div class="outline-text-2" id="text-23">
+<h2 id="org45f1caa"><span class="section-number-2">24.</span> Diffusion of blame</h2>
+<div class="outline-text-2" id="text-24">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1902779955974385690">Twitter</a></p>
 </p>
@@ -925,8 +964,8 @@ Ignore the big-brain justifications. It&rsquo;s a deliberate cover operation.
 </div>
 </div>
 <div id="outline-container-orgd8fb65a" class="outline-2">
-<h2 id="orgd8fb65a"><span class="section-number-2">24.</span> Arbitrage</h2>
-<div class="outline-text-2" id="text-24">
+<h2 id="orgd8fb65a"><span class="section-number-2">25.</span> Arbitrage</h2>
+<div class="outline-text-2" id="text-25">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1854562229871636774">Twitter</a></p>
 </p>
@@ -941,8 +980,8 @@ It&rsquo;s a small risk-free profit but it won&rsquo;t drive any overwhelming na
 </div>
 </div>
 <div id="outline-container-org167df95" class="outline-2">
-<h2 id="org167df95"><span class="section-number-2">25.</span> eight ways to engage with enemies</h2>
-<div class="outline-text-2" id="text-25">
+<h2 id="org167df95"><span class="section-number-2">26.</span> eight ways to engage with enemies</h2>
+<div class="outline-text-2" id="text-26">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1875025794449219831">Twitter</a></p>
 </p>
@@ -975,8 +1014,8 @@ eight ways to engage with enemies on x dot com the everything app
 </div>
 </div>
 <div id="outline-container-org81ea6a8" class="outline-2">
-<h2 id="org81ea6a8"><span class="section-number-2">26.</span> Wwnhmbkpd</h2>
-<div class="outline-text-2" id="text-26">
+<h2 id="org81ea6a8"><span class="section-number-2">27.</span> Wwnhmbkpd</h2>
+<div class="outline-text-2" id="text-27">
 <p>
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1937409578242871573">Twitter</a></p>
 </p>
@@ -989,7 +1028,7 @@ Before posting anything, people should always think &ldquo;What would NiṣādaH
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
