--- a/politics/political-theory/polcomp.html
+++ b/politics/political-theory/polcomp.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-14 Thu 02:45 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>I don't like the political compass</title>
@@ -209,12 +209,20 @@
 <ul>
 <li><a href="#org065bc6e">1.1. tldr</a></li>
 <li><a href="#org9a55f74">1.2. elaboration</a></li>
+<li><a href="#orgd0c6218">1.3. feel special</a></li>
 </ul>
 </li>
 <li><a href="#orgaae6a53">2. You live on the tangent space of the political compass</a></li>
 </ul>
 </div>
 </div>
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1956273272351547583">Twitter</a></p>
+</p>
+
+<p>
+I don&rsquo;t like the political comapss. One, because it misses the &ldquo;for whom?&rdquo; present in some ideologies and two because you actually live on the tangent space of the political compass and your magnitude is your effectiveness, not your extremism.
+</p>
 <div id="outline-container-orgbd13e64" class="outline-2">
 <h2 id="orgbd13e64"><span class="section-number-2">1.</span> The &ldquo;for whom?&rdquo; component of ideology</h2>
 <div class="outline-text-2" id="text-1">
@@ -283,6 +291,26 @@ This is honestly a hard concept to grasp because we&rsquo;re so used to assuming
 </p>
 </div>
 </div>
+<div id="outline-container-orgd0c6218" class="outline-3">
+<h3 id="orgd0c6218"><span class="section-number-3">1.3.</span> feel special</h3>
+<div class="outline-text-3" id="text-1-3">
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1960027342321205260">Twitter</a></p>
+</p>
+
+<p>
+These guys yearn for a non-BJP pro-capitalist party so they can keep big-braining and feel special.
+</p>
+
+<p>
+You won&rsquo;t get it. DMK is pro-capitalist, pro-industry &#x2026; for their people (Tamil non-V1s).
+</p>
+
+<p>
+They are not liberal humanists. They will cynically back leftistm for everyone else.
+</p>
+</div>
+</div>
 </div>
 <div id="outline-container-orgaae6a53" class="outline-2">
 <h2 id="orgaae6a53"><span class="section-number-2">2.</span> You live on the tangent space of the political compass</h2>
@@ -303,7 +331,7 @@ Your &ldquo;direction&rdquo; is your ideology, and your &ldquo;magnitude&rdquo; 
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-14 Thu 02:45</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
