--- a/politics/timepass.html
+++ b/politics/timepass.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Timepass</title>
@@ -500,7 +500,7 @@ Israel is TempleOS. God&rsquo;s temple is finished. Now, God kills CIA until it 
 <p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1829753986943238421">Twitter</a></p>
 </p>
 
-<pre class="example" id="orgca76b0f">
+<pre class="example" id="org0c2e36f">
 &gt; originate in Maharashtra
 &gt; immediately gain some Southern holdings
 &gt; Prosperity &amp; Hindoo unity
@@ -790,12 +790,24 @@ The wignats have chanced upon Big-braining theory. NiṣādaHermaphroditarchaṃ
 I dont like how many rightwingers, usually big accounts dabble in useless spheres just to search for hot takes, trying to reach a higher plane of understanding, they dont know or care that these hot takes are usually a botched defense of liberalism or straight up wrong.
 </p>
 </blockquote>
+
+<p>
+<p class="byline">Also published on <a href="https://x.com/real_mahalingam/status/1959894557258289306">Twitter</a></p>
+</p>
+
+<p>
+Fungible Brown theory is spreading. The wisdom of NiṣādaHermaphroditarchaṃśa (Mal&rsquo;ta boy ka parivar) thought continues to be vindicated.
+</p>
+
+<p>
+<img src="/img/mapchart/continents_modern/legend_title_color.png" alt="legend_title_color.png" />
+</p>
 </div>
 </div>
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
