--- a/history/hinduism/tolerance.html
+++ b/history/hinduism/tolerance.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:28 -->
+<!-- 2025-08-27 Wed 20:55 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Is Hinduism tolerant? Is it Nihilistic?</title>
@@ -304,8 +304,8 @@ This sheds light on the Hindu approach to syncretism. <b><i>Core values, princip
 <li><b>The three obligations/debts</b>, or Ṛṇatraya: to gods (to follow the religion), to rṣis (to learn, advance and pass down knowledge) and to one&rsquo;s ancestors (to produce children)</li>
 <li><b>The four sciences</b>: the Vedas and associated Vedāṅgas (which include the study of grammar and language), Ānvīkṣakī (hard science), Vārtā (practical work or commercial knowledge), Daṇḍa-nītī (government)</li>
 <li><b>Śāstra</b>: following the injunctions in the Dharmaṣāstras (moral literature) and Arthaṣāstra (economic/political literature)</li>
-<li><b>Indriyajaya</b>: Practising restraint over sensual pleasures, &ldquo;conquering your inner enemies&rdquo; as something <a href="/history/hinduism/restraint.html">instrumentally valuable</a> for your other goals</li>
-<li><b>The prohibition on cow and calf slaughter</b></li>
+<li><b>Indriyajaya</b>: Practising restraint over sensual pleasures, conquering your six inner enemies &#x2013; kāma (lust), krodha (anger), moha (desire, for various consumer pleasures), mada (pride), matsarya (envy). In Hinduism, conquering them means having total control over them (not being devoid of them) rather than letting them rule you &#x2014; and this is seen as something <a href="/history/hinduism/restraint.html">instrumentally valuable</a> for your other goals.
+<b>The prohibition on cow and calf slaughter</b></li>
 </ul>
 
 <p>
@@ -527,7 +527,7 @@ Hinduism doesn&rsquo;t need to be syncretized with anything—it is already sync
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:28</p>
+<p class="date">Created: 2025-08-27 Wed 20:55</p>
 </div>
 </body>
 </html>
