--- a/sitemap.html
+++ b/sitemap.html
@@ -3,7 +3,7 @@
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en" xml:lang="en">
 <head>
-<!-- 2025-08-18 Mon 08:40 -->
+<!-- 2025-08-27 Wed 21:50 -->
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Sitemap of srajma.github.io</title>
@@ -286,9 +286,10 @@
 <li><a href="politics/misc/masterstroke.html">Anti-masterstroking thread</a></li>
 <li><a href="politics/misc/legend.html">Founding legends</a></li>
 <li><a href="politics/misc/kannada.html">Kannada sub-nationalism</a></li>
+<li><a href="politics/misc/indian_traits.html">Misc Indian traits</a></li>
+<li><a href="politics/misc/dalali.html">ON DALĀLĪ AND BAVĀLĪ IN HINDOOSTĀN (ON SIMPING AND CHIMPING IN HINDOOSTĀN).</a></li>
 <li><a href="politics/misc/sindoor.html">Operation Sindoor concluding thoughts</a></li>
 <li><a href="politics/misc/gulf.html">Speculations on the future trajectory of the Gulf countries</a></li>
-<li><a href="politics/misc/strongly_agree.html">Strongly Agree</a></li>
 <li><a href="politics/misc/tharoor.html">Tharoor theories</a></li>
 <li><a href="politics/misc/front_fortification.html">Warfare and Front Fortification</a></li>
 </ul></li>
@@ -327,7 +328,7 @@
 </div>
 <div id="postamble" class="status">
 <p class="author">Author: NiṣādaHermaphroditarchaṃśa (Mal'ta boy ka parivar)</p>
-<p class="date">Created: 2025-08-18 Mon 08:40</p>
+<p class="date">Created: 2025-08-27 Wed 21:50</p>
 </div>
 </body>
 </html>
